<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Quadratic_Solver" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Loh's Method" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Scq-y8-JhR">
                                <rect key="frame" x="103" y="138" width="208" height="38"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="LohsMethod"/>
                                <fontDescription key="fontDescription" name="Palatino-Roman" family="Palatino" pointSize="34"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="UpM-36-4Yo" userLabel="Input Stack View">
                                <rect key="frame" x="157" y="397" width="100" height="102"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="a" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qzJ-HP-ejU">
                                        <rect key="frame" x="0.0" y="0.0" width="100" height="34"/>
                                        <accessibility key="accessibilityConfiguration" identifier="aTextField"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="b" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Qba-Pk-Pe4">
                                        <rect key="frame" x="0.0" y="34" width="100" height="34"/>
                                        <accessibility key="accessibilityConfiguration" identifier="bTextField"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="c" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Yxt-x4-NrQ">
                                        <rect key="frame" x="0.0" y="68" width="100" height="34"/>
                                        <accessibility key="accessibilityConfiguration" identifier="cTextField"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
                                    </textField>
                                </subviews>
                                <constraints>
                                    <constraint firstAttribute="width" constant="100" id="pR1-3M-nTB"/>
                                </constraints>
                            </stackView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Root 1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EnW-Hr-Tsl">
                                <rect key="frame" x="183" y="271" width="48.5" height="19"/>
                                <accessibility key="accessibilityConfiguration" identifier="root1"/>
                                <fontDescription key="fontDescription" name="Palatino-Roman" family="Palatino" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Root 2" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mfu-tU-3n2">
                                <rect key="frame" x="183" y="325" width="48.5" height="19"/>
                                <accessibility key="accessibilityConfiguration" identifier="root2"/>
                                <fontDescription key="fontDescription" name="Palatino-Roman" family="Palatino" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="XOE-kj-WXA">
                                <rect key="frame" x="168.5" y="549" width="77" height="59.5"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3UU-PJ-cJX">
                                        <rect key="frame" x="0.0" y="0.0" width="77" height="39"/>
                                        <accessibility key="accessibilityConfiguration" identifier="submit"/>
                                        <fontDescription key="fontDescription" name="Palatino-Roman" family="Palatino" pointSize="24"/>
                                        <state key="normal" title="Submit">
                                            <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                        </state>
                                        <connections>
                                            <action selector="solve:" destination="BYZ-38-t0r" eventType="touchUpInside" id="oj0-Xw-4Ze"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Phf-Ij-RHK" userLabel="About">
                                        <rect key="frame" x="0.0" y="40" width="77" height="18"/>
                                        <accessibility key="accessibilityConfiguration" identifier="about"/>
                                        <state key="normal" backgroundImage="questionmark.square" catalog="system">
                                            <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                            <color key="titleShadowColor" cocoaTouchSystemColor="darkTextColor"/>
                                        </state>
                                        <connections>
                                            <action selector="helpMe:" destination="BYZ-38-t0r" eventType="touchUpInside" id="VHb-9S-jXZ"/>
                                        </connections>
                                    </button>
                                </subviews>
                            </stackView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Solves the real roots of ax² + bx + c" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UjK-xq-Squ">
                                <rect key="frame" x="80" y="199" width="260" height="19"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="solvesRealRootsOfABC"/>
                                <fontDescription key="fontDescription" name="Palatino-Roman" family="Palatino" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <constraints>
                            <constraint firstItem="XOE-kj-WXA" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="8WX-kg-1Xh"/>
                            <constraint firstItem="EnW-Hr-Tsl" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="I86-UY-rS1"/>
                            <constraint firstItem="UpM-36-4Yo" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="J6B-B0-axY"/>
                            <constraint firstItem="XOE-kj-WXA" firstAttribute="top" secondItem="UpM-36-4Yo" secondAttribute="bottom" constant="50" id="VyC-Qn-0zi"/>
                            <constraint firstItem="UpM-36-4Yo" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="aHf-Pq-VVz"/>
                            <constraint firstItem="mfu-tU-3n2" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ukd-RE-l1Z"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <connections>
                        <outlet property="a" destination="qzJ-HP-ejU" id="F09-i3-vEo"/>
                        <outlet property="b" destination="Qba-Pk-Pe4" id="Ab1-LY-J3X"/>
                        <outlet property="c" destination="Yxt-x4-NrQ" id="CUM-P6-aqB"/>
                        <outlet property="root1" destination="EnW-Hr-Tsl" id="SeU-1g-U4L"/>
                        <outlet property="root2" destination="mfu-tU-3n2" id="9T0-4Q-ijn"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="137.68115942028987" y="138.61607142857142"/>
        </scene>
    </scenes>
    <resources>
        <image name="questionmark.square" catalog="system" width="128" height="114"/>
    </resources>
</document>
